Fixed that calendar popup has a higher z-index

--- a/src/pages/Session/scss/Preview.scss
+++ b/src/pages/Session/scss/Preview.scss
@@ -137,49 +137,53 @@
 
 
 
-.preview_popup {
-	display: flex;
-	flex-direction: column;
-	gap: var(--padding);
+.preview_popup_calendar {
+	z-index: 10001;
 
-	.react-calendar {
-		background-color: var(--background-color) !important;
-		font-size: 25px;
-		width: 100% !important;
-		border-radius: 5px;
-		padding: 10px;
-
-		.react-calendar__tile {
+	.preview_popup {
+		display: flex;
+		flex-direction: column;
+		gap: var(--padding);
+	
+		.react-calendar {
+			background-color: var(--background-color) !important;
+			font-size: 25px;
+			width: 100% !important;
 			border-radius: 5px;
-		}
-
-		.react-calendar__tile--active, 
-		.react-calendar__tile--active:hover, 
-		.react-calendar__tile--hasActive, 
-		.react-calendar__tile--hasActive:hover{
-			background: var(--green) !important;
-			color: var(--button-text-color) !important;
-		}
-		
-		/* Navigation */
-		
-		.react-calendar__navigation {
-			height: 60px !important;
-
-			button {
-				font-size: 30px;
-				background: none !important;
+			padding: 10px;
+	
+			.react-calendar__tile {
+				border-radius: 5px;
 			}
-
-			.react-calendar__navigation__next-button,
-			.react-calendar__navigation__prev-button {
-				border-radius: 10px;
-				flex-grow: .5;
+	
+			.react-calendar__tile--active, 
+			.react-calendar__tile--active:hover, 
+			.react-calendar__tile--hasActive, 
+			.react-calendar__tile--hasActive:hover{
+				background: var(--green) !important;
+				color: var(--button-text-color) !important;
 			}
 			
-			.react-calendar__navigation__next2-button, 
-			.react-calendar__navigation__prev2-button {
-				display: none;
+			/* Navigation */
+			
+			.react-calendar__navigation {
+				height: 60px !important;
+	
+				button {
+					font-size: 30px;
+					background: none !important;
+				}
+	
+				.react-calendar__navigation__next-button,
+				.react-calendar__navigation__prev-button {
+					border-radius: 10px;
+					flex-grow: .5;
+				}
+				
+				.react-calendar__navigation__next2-button, 
+				.react-calendar__navigation__prev2-button {
+					display: none;
+				}
 			}
 		}
 	}
